--- a/src/Sidus/EAVDemoBundle/Resources/config/services.yml
+++ b/src/Sidus/EAVDemoBundle/Resources/config/services.yml
@@ -1,9 +1,15 @@
 parameters:
     sidus_eav_model.entity.data.class: Sidus\EAVDemoBundle\Entity\Data
     sidus_eav_model.entity.value.class: Sidus\EAVDemoBundle\Entity\Value
-    sidus_eav_model.manager.data.class: Sidus\EAVDemoBundle\Manager\DataManager
+    sidus_eavdemo.manager.data.class: Sidus\EAVDemoBundle\Manager\DataManager
 
 services:
-    sidus_eav_model.manager.data:
-        class: %sidus_eav_model.manager.data.class%
+    sidus_eavdemo.manager.data:
+        class: %sidus_eavdemo.manager.data.class%
         arguments: [@doctrine.orm.entity_manager, @sidus_eav_model.doctrine.repository.data]
+
+    sidus_eavdemo.admin.sidus_admin_subscriber:
+        class: Sidus\EAVDemoBundle\Admin\SidusAdminSubscriber
+        arguments: [ @sidus_eav_model.family_configuration.handler, @twig, %sidus_eav_model.entity.data.class% ]
+        tags:
+            - { name: kernel.event_subscriber }
