--- a/src/Sidus/EAVDemoBundle/Resources/config/services.yml
+++ b/src/Sidus/EAVDemoBundle/Resources/config/services.yml
@@ -7,6 +7,8 @@ services:
     sidus_eavdemo.manager.data:
         class: %sidus_eavdemo.manager.data.class%
         arguments: [@doctrine.orm.entity_manager, @sidus_eav_model.doctrine.repository.data]
+        tags:
+            - { name: lag.manager }
 
     sidus_eavdemo.admin.sidus_admin_subscriber:
         class: Sidus\EAVDemoBundle\Admin\SidusAdminSubscriber
