--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -111,5 +111,5 @@ fos_elastica:
                         listener:
                             immediate: ~
                         finder: ~
-#                        model_to_elastica_transformer:
-#                            service: sidus_eav_demo.elastica.serializer.data
+                        elastica_to_model_transformer:
+                            ignore_missing: true
