--- a/composer.json
+++ b/composer.json
@@ -19,19 +19,10 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
 
-        "mopa/bootstrap-bundle": "~3.0",
-        "twbs/bootstrap-sass": "~3.3.0",
-        "components/jquery": "~1.11",
-        "components/jqueryui": "~1.11",
-        "robloach/component-installer": "~0.2",
-
         "sidus/eav-model-bundle": "dev-master",
+        "sidus/eav-bootstrap-bundle": "dev-master",
         "sidus/filter-bundle": "dev-master",
-
         "stfalcon/tinymce-bundle": "dev-master",
-        "white-october/pagerfanta-bundle": "~1.0",
-        "samson/autocomplete-bundle": "~2.0.3",
-        "pinano/select2-bundle": "~3.5.2",
 
         "jms/serializer-bundle": "~1.1",
         "friendsofsymfony/elastica-bundle": "~3.1",
